[package]
name = "mantra-bridge-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
wasm-check = "cosmwasm-check target/wasm32-unknown-unknown/release/big_bridge_contract.wasm"
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer-arm64:0.16.0
"""

[dependencies]
cosmwasm-std = "2.1.3"
cw-storage-plus = "2.0.0"
cosmwasm-schema = "2.1.3"
thiserror = "1.0.63"
cw2 = "2.0.0"
cw-controllers = "2.0.0"
cw-ownable = "2.1.0"

[dev-dependencies]
cw-multi-test = "2.1.1"
